[package]
name = "t2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
llm-chain = { version = "0.6.2", features = ["async"] }
llm-chain-openai = "0.6.2"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", features = ["ansi"]}

